tests/sksl/errors/BitShiftFloat.sksl
void main() { float x = 6; x >>= 1; }
